syntax = "proto3";

import "input/reqreply/message/create.proto";
import "input/reqreply/message/eventSubscription.proto";

package rys.ajaxpetproject.service.message;

service MessageService {
  rpc create(request.message.create.proto.MessageCreateRequest)
      returns (request.message.create.proto.MessageCreateResponse);
}
